[package]
name = "eg-renderer-core"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
cgmatrix = "0.2.1"
serde = "^1.0.132"
serde_derive = "^1.0.132"

[dependencies.wasm-bindgen]
version = "0.2.78"
features = [
  'serde-serialize',
]

[dependencies.web-sys]
version = "0.3.55"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'TextMetrics',
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'Window',
]
